--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,14 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   email_validator: ^1.0.0
   geolocator: '^5.1.4+2'
-  #flutter_rating: ^0.0.2
+  animated_text_kit: ^1.3.1
+  firebase_core: ^0.4.1+3
+  firebase_auth: ^0.14.0+8
+  cloud_firestore: ^0.12.10
+  modal_progress_hud: ^0.1.3
+  google_sign_in: ^4.0.4
+  flutter_twitter_login: ^1.1.0
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +58,7 @@ flutter:
   assets:
    - assets/login_background.jpg
    - assets/home.PNG
+   - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
