--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   email_validator: ^1.0.0
   geolocator: '^5.1.4+2'
+  animated_text_kit: ^1.3.1
+  firebase_core: ^0.4.1+3
+  firebase_auth: ^0.14.0+8
+  modal_progress_hud: ^0.1.3
+  google_sign_in: ^4.0.4
 
 dev_dependencies:
   flutter_test:
