--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^0.14.0+8
   modal_progress_hud: ^0.1.3
   google_sign_in: ^4.0.4
+  flutter_twitter_login: ^1.1.0
 
 dev_dependencies:
   flutter_test:
