--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   google_sign_in: ^4.0.4
   flutter_twitter_login: ^1.1.0
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
