--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_sign_in: ^4.0.4
   flutter_twitter_login: ^1.1.0
   flutter_facebook_login: ^3.0.0
+  shared_preferences: ^0.5.4+8
 
 dev_dependencies:
   flutter_test:
