--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_twitter_login: ^1.1.0
   flutter_facebook_login: ^3.0.0
   shared_preferences: ^0.5.4+8
+  firebase_messaging: ^6.0.2
 
 dev_dependencies:
   flutter_test:
