--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   email_validator: ^1.0.0
   geolocator: '^5.1.4+2'
+  localstorage:
   #flutter_rating: ^0.0.2
 
 dev_dependencies:
